@@ -3,11 +3,13 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 - pts-core: Always report the CPU scaling governor to the system table
+- pts-core: Add auto-sort-result-file option
 - phoromatic: Improve the systems' page
 - phoromatic: Allow up to three connection failures before quitting
 - pts_Graph: Improved, cleaner, and more accurate rendering of the pts_OverViewGraph
 - pts_Graph: Make the horizontal box chart graph in good shape
 - pts_Graph: Revert earlier render_graph_value_ticks() change by mufasa72 as it produced inaccurate tick values
+- pts_Graph: use the horizontal box plot when rendering frame times for large number of results
 
 Phoronix Test Suite 5.2 Milestone 3
 22 May 2014
